@startuml

title __DASHBOARD's Class Diagram__\n

  namespace com.code.group3finalproject {
    namespace ui.dashboard {
      class com.code.group3finalproject.ui.dashboard.DashboardFragment {
          {static} - NEW_STOCK_ACTIVITY_REQUEST_CODE : int
          + onActivityResult()
          + onCreateOptionsMenu()
          + onCreateView()
          + onDestroyView()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.dashboard {
      class com.code.group3finalproject.ui.dashboard.DashboardViewModel {
          - mAllStocks : LiveData<List<Stock>>
          + DashboardViewModel()
          + delete()
          + insert()
          ~ getAllStocks()
          ~ searchStocks()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.dashboard {
      class com.code.group3finalproject.ui.dashboard.StockRecycleAdapter {
          - stocks : List<Stock>
          + StockRecycleAdapter()
          + deleteStock()
          + filter()
          + getItem()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
          + refreshData()
      }
    }
  }
  

  namespace com.code.group3finalproject {
    namespace ui.dashboard {
      class com.code.group3finalproject.ui.dashboard.StockViewHolder {
          + stockPrice : TextView
          + stockSymbol : TextView
          + StockViewHolder()
          + bind()
          {static} ~ create()
      }
    }
  }
  

  com.code.group3finalproject.ui.dashboard.DashboardFragment -up-|> androidx.fragment.app.Fragment
  com.code.group3finalproject.ui.dashboard.DashboardFragment o-- com.code.group3finalproject.ui.dashboard.StockRecycleAdapter : StockRecycleAdapter
  com.code.group3finalproject.ui.dashboard.DashboardFragment o-- com.code.group3finalproject.databinding.FragmentDashboardBinding : binding
  com.code.group3finalproject.ui.dashboard.DashboardFragment o-- com.code.group3finalproject.ui.dashboard.DashboardViewModel : dashboardViewModel
  com.code.group3finalproject.ui.dashboard.DashboardViewModel -up-|> androidx.lifecycle.AndroidViewModel
  com.code.group3finalproject.ui.dashboard.DashboardViewModel o-- com.code.group3finalproject.db.dao.StockRepository : mStockRepository
  com.code.group3finalproject.ui.dashboard.StockRecycleAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.code.group3finalproject.ui.dashboard.StockViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
